- fixed a bug in mode "--create" where atoms would sometimes be missing when creating lattices with some orientations.
- fixed a bug in mode "--merge" where sometimes auxiliary properties would not be correctly handled.
- fixed a bug in option "-disturb" where the shells were not displaced along with their core.
- fixed a bug in the displaying of progress bar that slowed down the program.
- l10n: added the German translations of the messages. Thanks to Juri Barthel, RWTH Aachen, Germany, for translating Atomsk.



beta 0.8.8 (12 Jan. 2016)
-------------------------
- fixed a bug where atom indices could not be written past 100 millions in LAMMPS data files. Now it can write up to the limit of integers (about 2 billions).
- fixed a bug where option "-unskew" did not work, because result was not saved to the array H.


Beta 0.8.7 (6 June 2016)
------------------------
- fixed a bug in mode "--create", where an fcc lattice oriented with a vector of type <112> would have missing atoms. Thanks to Yann Even and Jonathan Amodeo, MATEIS, Lyon, France, for pointing out this bug.


Beta 0.8.6 (9 March 2016)
-------------------------
- fixed a bug in the reading of LAMMPS custom files (*.lmc) when it contained reduced coordinates and the lower bounds of the box were not at the origin. Thanks to Yann Even and Jonathan Amodeo, MATEIS, Lyon, France, for pointing out this bug.


Beta 0.8.5 (7 March 2016)
-------------------------
- fixed a bug where the detection of Cartesian or reduced coordinates would fail when the number of atoms was very small (typically unit cells containing only one or two atoms). Thanks to Jérôme Dequeker, UMET, Lille, France, for pointing out this bug.
- fixed a bug in mode "--create" where the number of atoms in oriented unit cells would be incorrect for some values of the lattice parameter. Thanks to J. Amodeo, MATEIS, Lyon, France, for pointing out this bug.


Beta 0.8.4 (10 Feb. 2015)
-------------------------