@@ -25,6 +25,8 @@
 
 <p><strong>Eva Marie Kalivoda</strong>, Fraunhofer-IWM, Freiburg, Germany, for adding the support of <a href="./format_xv.html">SIESTA XV files</a>.</p>
 
+<p><strong>Srinivasan Mahendran</strong>, University of Lille, France, for his help with the implementation of a cell decomposition algorithm, which makes neighbor search faster.</p>
+
 <p><strong>Matous Mrovec</strong>, Fraunhofer-IWM, Freiburg, Germany, for helping with the implementation of anisotropic elasticity for <a href="./option_disloc.html">building dislocations</a>.</p>
 
 <p><a href="./index.html">Back to main menu</a></p>
