@@ -120,6 +120,14 @@
 </div>
 
 
+<li><a href="#" id="uselang" class="showLink" onclick="showHide('uselang');return false;"><strong>How do I change the language?</strong></a></li>
+
+<div id="uselang-show" class="more"><p>Atomsk tries to speak your language if it can; otherwise it defaults to English. If you wish to use a specific language, you can use the command-line option "-lang", followed by the two-letter code of your language. Please have a look at the <a href="./progbe_lang.html">list of supported languages</a>.</p>
+
+<p>To make the change more permanent, you can create your own configuration file. Please refer to <a href="./progbe_configfile.html">this page</a> to learn how to set up your own configuration file.</p>
+</div>
+
+
 <li><a href="#" id="usenclo" class="showLink" onclick="showHide('usenclo');return false;"><strong>How many options can I call in a single command-line?</strong></a></li>
 
 <div id="usenclo-show" class="more"><p>There is virtually no limitation, apart from those of your shell itself. Try "<code>getconf ARG_MAX</code>" to know the maximum command line length that your shell supports.</p></div>
