@@ -102,7 +102,7 @@
 
   <li><a href="./acknowledgements.html">Acknowledgements</a></li>
 
-  <li><a href="./faq.html">FAQ</a></li>
+  <li><a href="./faq.html">FAQ - Frequently Asked Questions</a></li>
 
   <li><a href="./developers.html">Information for developers</a></li>
 
