@@ -25,6 +25,8 @@
 
 <p><strong>Eva Marie Kalivoda</strong>, Fraunhofer-IWM, Freiburg, Allemagne, pour avoir implémenté le support des fichiers au <a href="./format_xv.html">format XV de SIESTA</a>.</p>
 
+<p><strong>Srinivasan Mahendran</strong>, Université de Lille, France, pour son aide dans l'implémentation d'un algorithme de décomposition en cellules rendant la recherche de voisins plus rapide.</p>
+
 <p><strong>Matous Mrovec</strong>, Fraunhofer-IWM, Freiburg, Allemagne, pour son aide dans l'implémentation de l'élasticité anisotrope pour <a href="./option_disloc.html">construire des dislocations</a>.</p>
 
 <p><a href="./index.html">Retour au menu principal</a></p>
