@@ -124,6 +124,14 @@
 </div>
 
 
+<li><a href="#" id="uselang" class="showLink" onclick="showHide('uselang');return false;"><strong>Comment changer la langue ?</strong></a></li>
+
+<div id="uselang-show" class="more"><p>Atomsk essaye de parler votre langue, s'il le peut ; sinon par défaut il écrit ses messages en anglais. Si vous souhaitez qu'il utilise une langue spécifique, vous pouvez ajouter à votre commande l'option "-lang", suivie du code à deux lettres de votre langue. Veuillez vous référer à la <a href="./progbe_lang.html">liste des langues supportées</a>.</p>
+
+<p>Pour rendre le changement permanent, vous pouvez créer votre propre fichier de configuration pour Atomsk. Veuillez vous référer à <a href="./progbe_configfile.html">cette page</a> pour savoir comment configurer votre fichier de configuration.</p>
+</div>
+
+
 <li><a href="#" id="usenclo" class="showLink" onclick="showHide('usenclo');return false;"><strong>Combien d'options puis-je utiliser dans une même ligne de commandes ?</strong></a></li>
 
 <div id="usenclo-show" class="more"><p>Il n'y a virtuellement aucune limitation, autre que celle de votre environnement. Sous UNIX/Linux vous pouvez taper "<code>getconf ARG_MAX</code>" pour connaître la longueur maximale de ligne de commande que votre shell supporte.</p></div>
@@ -140,7 +148,7 @@
 <p>Il est possible que Atomsk intègre ce genre de fonctionnalité dans le futur, mais aucun plan précis n'est prévu pour l'instant.</p></div>
 
 
-<li><a href="#" id="usesc" class="showLink" onclick="showHide('usesc');return false;"><strong>J'ai une cellule unité, comment puis-je générer une super-cellule ?</strong></a></li>
+<li><a href="#" id="usesc" class="showLink" onclick="showHide('usesc');return false;"><strong>J'ai une cellule élémentaire, comment puis-je générer une super-cellule ?</strong></a></li>
 
 <div id="usesc-show" class="more"><p>Ceci peut être fait grâce à l'option <a href="./option_duplicate.html">option <code>-duplicate</code></a>. Si votre cellule unité est dans le fichier <code>cellule.xsf</code>, et que vous voulez créer une super-cellule de taille 4x4x2, alors la commande serait :</p>
 
