@@ -102,7 +102,7 @@
 
   <li><a href="./acknowledgements.html">Remerciements</a></li>
 
-  <li><a href="./faq.html">FAQ</a></li>
+  <li><a href="./faq.html">FAQ - Questions fréquentes</a></li>
 
   <li><a href="./developers.html">Informations pour les développeurs</a></li>
 
